package com.transportapp.application.commands

trait Command  