package com.transportapp.domain.events

trait AppEvent